🚨 Run tests with --illegal-access=deny
Why:
- The same option is used also in production
- JVM used to give a warning:

WARNING: Illegal reflective access by org.xnio.nio.NioXnio$2 (file:/Users/esko/.m2/repository/org/jboss/xnio/xnio-nio/3.3.6.Final/xnio-nio-3.3.6.Final.jar) to constructor sun.nio.ch.KQueueSelectorProvider()
WARNING: Please consider reporting this to the maintainers of org.xnio.nio.NioXnio$2
WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
WARNING: All illegal access operations will be denied in a future release